--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,6 +33,12 @@ services:
     env_file:
       - .env
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8005/api/token"]
+      interval: 10s
+      timeout: 5s
+      retries: 100
+      start_period: 10s
     ports:
         - "8005:8005"
     volumes:
@@ -42,7 +48,8 @@ services:
   frontend:
     image: nginx:latest
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     restart: unless-stopped
     ports:
         - "8006:8080"
